- finished the 3d spinner - fixed some layout issues

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -27,7 +27,7 @@ html {
 
 body {
   font-size: 1.6rem;
-  margin: 0 auto;
+  // margin: 0 auto;
 }
 
 h1,
@@ -229,7 +229,16 @@ ol {
 
   h2 {
     letter-spacing: -0.05rem;
-    margin-bottom: 4rem;
+  }
+
+  .spinnerBtn {
+    display: none;
+  }
+
+  #testimonials:hover {
+    .spinnerBtn {
+      display: block;
+    }
   }
 
   #testimonials {
@@ -263,13 +272,13 @@ ol {
 
 
   .avatarImage {
-    max-width: 19vw;
-    margin-bottom: -11vw;
+    max-width: 20vw;
+    transform: translateY(56%);
   }
 
   .testimonial {
     min-height: 100%;
-    padding: 16vw 2rem 2rem;
+    padding: 10rem 2rem 2rem;
 
     background: var(--theme-very-light-gray);
   }
@@ -284,8 +293,9 @@ ol {
 
   #testimonialIndicator {
     display: flex;
+    align-items: stretch;
     justify-content: center;
-    margin: 2.5rem 0 2rem;
+    margin: 1rem 0 2rem;
 
     color: var(--theme-bright-red);
 
@@ -411,11 +421,14 @@ footer {
   }
 
   #socialMediaLinks {
+    display: flex;
+    justify-content: center;
     padding-top: 4rem;
 
     ul {
       display: flex;
       justify-content: space-around;
+      width: 40rem;
       padding: 0 2rem;
     }
 
@@ -648,12 +661,46 @@ footer {
       font-size: 4.1rem;
     }
 
-    #testimonials {
-      // width: 100rem;
-      height: 20vh;
-      perspective: 800px;
+    #testimonialSpinner {
+      position: relative;
+    }
 
-      // overflow-x: hidden;
+    #testimonialSpinner:hover {
+      .spinnerBtn {
+        display: block;
+      }
+    }
+
+    .spinnerBtn {
+      display: none;
+      position: absolute;
+      top: 50%;
+      width: 4rem;
+      height: auto;
+      z-index: 2;
+
+      cursor: pointer;
+      border: none;
+      background: none;
+    }
+
+    .spinnerBtn:hover {
+      path {
+        fill: var(--theme-bright-red);
+      }
+    }
+
+    #spinLeftBtn {
+      left: 15%;
+    }
+
+    #spinRightBtn {
+      right: 15%;
+    }
+
+    #testimonials {
+      height: 35rem;
+      perspective: 800px;
 
       li {
         --min-width: 50%;
@@ -663,8 +710,14 @@ footer {
         height: 80%;
         left: calc((100% - var(--min-width)) / 2);
 
-        transition: all 200ms ease-in-out;
-        // transform-origin: 50% 50% -150px;
+        transition: all 250ms linear;
+      }
+
+      li.active .testimonial {
+        box-shadow:
+          8px 0 10px 2px rgba(0, 0, 0, 0.1),
+          -8px 0 10px 2px rgba(0, 0, 0, 0.1),
+          0px 8px 10px 2px rgba(0, 0, 0, 0.1);
       }
 
       #testimonial1 {
@@ -690,11 +743,13 @@ footer {
 
       .testimonial {
         padding: 6rem 4rem 2rem;
+
+        transition: all 250ms linear;
       }
 
       .avatarImage {
-        max-width: 4.8vh;
-        margin-bottom: -2.8vh;
+        max-width: 6rem;
+        transform: translateY(60%);
       }
 
       q {
@@ -705,10 +760,6 @@ footer {
 
     #testimonialIndicator {
       display: none;
-    }
-
-    .buttonContainer {
-      margin-top: 2rem;
     }
   }
 
@@ -799,6 +850,7 @@ footer {
     }
 
     #socialMediaLinks {
+      display: block;
       grid-area: mediaLinks;
       padding-top: 3rem;
       margin-top: 1rem;
